Add total money, total transactions and links on dashboard

--- a/app/views/exchanges/_form.html.erb
+++ b/app/views/exchanges/_form.html.erb
@@ -11,17 +11,15 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <!-- <div class="field">
     <input type="radio" name="yesno" value=1></input>
     <%= f.label :withdrawal %><br>
-    <!-- <%= f.text_field :withdrawal %> -->
   </div>
   <div class="field">
 
     <input type="radio" name="yesno" value=1></input>
     <%= f.label :deposit %><br>
-    <!-- <%= f.text_field :deposit %> -->
-  </div>
+  </div> -->
   <div class="field">
     <%= f.label :amount %><br>
     <%= f.text_field :amount %>
