--- a/app/views/exchanges/dashboard.html.erb
+++ b/app/views/exchanges/dashboard.html.erb
@@ -3,8 +3,12 @@
 <h1>Welcome to your dashboard!!!!!!!!!!!!!!!!!!!!!!!!!!</h1>
 
 <br>
-<p> All your moneys; <%= @total_money %></p>
-<p> over <%= @trans_count =%> transactions</p>
+<%if @total_money < 0 %>
+<p><h1>YOU BROKE</h1></p>
+<%else%>
+<p> You have, <%= @total_money %> moneys </p>
+<p> You have made, <%= @trans_count %> transactions </p>
+<%end%>
 <%= link_to 'Index', exchanges_path %>
 <br>
 <%= link_to 'Create new transaction!', new_exchange_path %>
