--- a/app/views/exchanges/index.html.erb
+++ b/app/views/exchanges/index.html.erb
@@ -16,7 +16,7 @@
       <tr>
         <td><%= exchange.collecter %></td>
         <td><%= exchange.amount %></td>
-        <td><%= link_to 'Show', exchange %></td>
+
         <td><%= link_to 'Edit', edit_exchange_path(exchange) %></td>
         <td><%= link_to 'Destroy', exchange, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -36,5 +36,7 @@
 <%if @broke %>
 <h1>YOUZ A BROKE MO </h1>
 <%end%>
-<p> You have, <%= @total_money %> moneys </p>
+<p> You have, $$$$$$$$$$$$$$$$$$$$$$$<%= @total_money %> moneys </p>
 <p> You have made, <%= @trans_count %> transactions </p>
+<p>Your biggest expense was <%= @maxamount %></p>
+<p>from <%=@expensive_company%></p>
