Prepare for Heroku.

--- a/app/views/exchanges/_form.html.erb
+++ b/app/views/exchanges/_form.html.erb
@@ -11,22 +11,14 @@
     </div>
   <% end %>
 
-  <!-- <div class="field">
-    <input type="radio" name="yesno" value=1></input>
-    <%= f.label :withdrawal %><br>
-  </div>
-  <div class="field">
-
-    <input type="radio" name="yesno" value=1></input>
-    <%= f.label :deposit %><br>
-  </div> -->
   <div class="field">
     <%= f.label :amount %><br>
     <%= f.text_field :amount %>
   </div>
+  
   <div class="field">
-    <%= f.label :collecter %><br>
-    <%= f.text_field :collecter %>
+    <%= f.label :collector %><br>
+    <%= f.text_field :collector %>
   </div>
 
   <div class="actions">
