--- a/app/views/exchanges/show.html.erb
+++ b/app/views/exchanges/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Collecter:</strong>
-  <%= @exchange.collecter %>
+  <strong>Collector:</strong>
+  <%= @exchange.collector %>
 </p>
 
 <%= link_to 'Edit', edit_exchange_path(@exchange) %> |
