--- a/app/views/exchanges/index.html.erb
+++ b/app/views/exchanges/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Collecter</th>
+      <th>Collector</th>
       <th>Amount</th>
       <th colspan="3"></th>
     </tr>
@@ -13,30 +13,9 @@
 
   <tbody>
     <% @exchanges.each do |exchange| %>
-      <tr>
-        <td><%= exchange.collecter %></td>
-        <td><%= exchange.amount %></td>
-
-        <td><%= link_to 'Edit', edit_exchange_path(exchange) %></td>
-        <td><%= link_to 'Destroy', exchange, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <%= render partial: "row", locals: {e: exchange} %>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<!-- <%if @total_money < 0 %>
-<p><h1>YOU BROKE</h1></p>
-<%end%>
-<p> You have, <%= @total_money %> moneys </p>
-<p> You have made, <%= @trans_count %> transactions </p>
-<%= link_to 'New Exchange', new_exchange_path %> -->
-
-<%if @broke %>
-<h1>YOUZ A BROKE MO </h1>
-<%end%>
-<p> You have, $$$$$$$$$$$$$$$$$$$$$$$<%= @total_money %> moneys </p>
-<p> You have made, <%= @trans_count %> transactions </p>
-<p>Your biggest expense was <%= @maxamount %></p>
-<p>from <%=@expensive_company%></p>
