Add changes from Thursday class.

--- a/app/views/exchanges/_form.html.erb
+++ b/app/views/exchanges/_form.html.erb
@@ -15,10 +15,15 @@
     <%= f.label :amount %><br>
     <%= f.text_field :amount %>
   </div>
-  
+
   <div class="field">
     <%= f.label :collector %><br>
     <%= f.text_field :collector %>
+  </div>
+
+  <div class="field">
+    <%= f.label :phone_number %><br>
+    <%= f.text_field :phone_number %>
   </div>
 
   <div class="actions">
