--- a/app/views/exchanges/_row.html.erb
+++ b/app/views/exchanges/_row.html.erb
@@ -1,6 +1,7 @@
 <tr>
   <td><%= e.collector %></td>
   <td><%= make_money(e.amount) %></td>
+  <td><%= phone_numberize(e.phone_number) %></td>
 
   <td><%= link_to 'Edit', edit_exchange_path(e) %></td>
   <td><%= link_to 'Destroy', e, method: :delete, data: { confirm: 'Are you sure?' } %></td>
