--- a/app/views/exchanges/index.html.erb
+++ b/app/views/exchanges/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Collector</th>
       <th>Amount</th>
+      <th>Phone Number</th>
       <th colspan="3"></th>
     </tr>
   </thead>
